--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "url": "https://github.com/antoniehuang/Clean-from-League/issues"
   },
   "homepage": "https://github.com/antoniehuang/Clean-from-League#readme",
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^16.0.1"
+  }
 }
